# catalog_migration_rt01

./: README.md  databricks.yml  pyproject.toml
resources/backup/: uc_dr_backup.py  uc_dr_backup_optimize.py
resources/jobs/: uc_dr_backup_job.yml  uc_dr_restore_job.yml  uc_dr_sa_monitoring_job.yml
resources/storage_account_monitoring/: uc_dr_sa_monitoring.py
resources/utility/: find_objects_utility.py
src/dr/uc_dr_objects/: catalogs.py  connections.py  ddl.py  delta_sharing_recipients.py  delta_sharing_shares.py  external_locations.py  functions.py  objects.py  registered_models.py  schemas.py  storage_credentials.py  tables.py  views.py  volumes.py
src/dr/uc_dr_restore/: check_restore_object_count.py  count_diff_pre_and_post_restore.py  dr_restore_report.py  main.py  main_restore_post_table.py  main_restore_pre_table.py  main_restore_table.py  restore_manager.py
src/dr/uc_dr_restore/utilities/: batch_job_execution_end.py  batch_job_execution_start.py  helper_functions.py  restore_restartability_logging.py  send_email.py
src/dr/utils/: azure_read.py  send_email.py  service_now.py  uc_dr_checks.py
