[tool.poetry]
name = "pepsicoucdr"
version = "0.1.0"
description = "PepsiCo UC Disaster Recovery Solution"
authors = ["wagner silveira <wagner.silveira@databricks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "~3.1.3"
databricks-sdk = "~0.25.1"
msal = "~1.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
